Registartion and relogins now work.
